align fixes

--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -94,7 +94,6 @@ body {
 }
 .section-title {
   font-size: 2.5em;
-  text-align: center;
   font-family: 'Roboto', sans-serif;
 }
 .screen {
